tests/func/parsing/error_reporting/custom_hints/missing_closing_parent_lr.err
1:6: syntax error: unexpected end of file
    1 | (2 + 3
      |       ^^^ expected: ) * +
  hint: Missing closing parenthesis